// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error 1`] = `
<span
  className={undefined}
  style={undefined}
>
  <div
    className="el-alert el-alert--error"
    style={Object {}}
  >
    <div
      className="el-alert__content"
    >
      <span
        className="el-alert__title"
      >
        错误提示的文案
      </span>
      <i
        className="el-alert__closebtn el-icon-close"
        onClick={[Function]}
        style={Object {}}
      />
    </div>
  </div>
</span>
`;

exports[`info 1`] = `
<span
  className={undefined}
  style={undefined}
>
  <div
    className="el-alert el-alert--info"
    style={Object {}}
  >
    <div
      className="el-alert__content"
    >
      <span
        className="el-alert__title"
      >
        消息提示的文案
      </span>
      <i
        className="el-alert__closebtn el-icon-close"
        onClick={[Function]}
        style={Object {}}
      />
    </div>
  </div>
</span>
`;

exports[`success 1`] = `
<span
  className={undefined}
  style={undefined}
>
  <div
    className="el-alert el-alert--success"
    style={Object {}}
  >
    <div
      className="el-alert__content"
    >
      <span
        className="el-alert__title"
      >
        成功提示的文案
      </span>
      <i
        className="el-alert__closebtn el-icon-close"
        onClick={[Function]}
        style={Object {}}
      />
    </div>
  </div>
</span>
`;

exports[`warning 1`] = `
<span
  className={undefined}
  style={undefined}
>
  <div
    className="el-alert el-alert--warning"
    style={Object {}}
  >
    <div
      className="el-alert__content"
    >
      <span
        className="el-alert__title"
      >
        警告提示的文案
      </span>
      <i
        className="el-alert__closebtn el-icon-close"
        onClick={[Function]}
        style={Object {}}
      />
    </div>
  </div>
</span>
`;
